--- a/.github/workflows/update_data.yml
+++ b/.github/workflows/update_data.yml
@@ -9,7 +9,7 @@ on:
     - cron: "30 9 * * *"
 
 jobs:
-  update-nbl:
+  update-euroleage-data:
     runs-on: macOS-latest
     env:
       R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
@@ -19,7 +19,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: r-lib/actions/setup-r@v2
       - name: Package Installation
-        run: Rscript -e 'install.packages(c("remotes", "dplyr", "rlang"))'
+        run: Rscript -e 'install.packages(c("remotes", "dplyr", "rlang", "here", "piggyback"))'
       - name: euroleagueRscrape Installation
         run: Rscript -e 'remotes::install_github("JaseZiv/euroleagueRscrape")'
       - name: Update season round metadata
