--- a/.github/workflows/update_data.yml
+++ b/.github/workflows/update_data.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   update-euroleage-data:
-    runs-on: macOS-latest
+    runs-on: macos-13
     env:
       R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
       RSPM: ${{ matrix.config.rspm }}
